# TimeSheet/src/main/resources/OpenApi.yml
@@ -159,6 +159,32 @@ paths:
         "401":
           description: UNAUTH
 
+  /report/export/csv:
+    post:
+      summary: Generate reports in csv
+      description: This metod returns list of reports in csv file
+      tags:
+        - "Report"
+      operationId: exportToCSV
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReportFilterDTO'
+      responses:
+        "200":
+          description: Succes
+          content:
+            application/csv:
+              schema:
+                type: string
+                format: binary
+
+        "400":
+          description: BAD REQUEST
+        "401":
+          description: UNAUTH
+
   /project:
     get:
       summary: This gets all projects
